MODLD-826: fix violations